環境変数を追加

--- a/action.yml
+++ b/action.yml
@@ -19,24 +19,27 @@ inputs:
     description: 'The path where the files to be uploaded is located'
     required: true
 
+  remove-outdated:
+    description: 'Whether to delete files that do not exist locally'
+    default: 'true'
+    required: false
+
   google-client-id:
-description: Your Google Drive API client ID
+    description: Your Google Drive API client ID
     required: false
 
   google-client-secret:
     description: Your Google Drive API client secret
     required: false
 
-  remove-outdated:
-    description: 'Whether to delete files that do not exist locally'
-    default: 'true'
-    required: false
 
 runs:
   using: 'docker'
   image: 'Dockerfile'
-  env: 
+  env:
     SKICKA_TOKENCACHE_JSON: ${{ inputs.skicka-tokencache-json }}
     UPLOAD_FROM: ${{ inputs.upload-from }}
     UPLOAD_TO: ${{ inputs.upload-to }}
     REMOVE_OUTDATED: ${{ inputs.remove-outdated }}
+    GOOGLE_CLIENT_ID: ${{ inputs.google-client-id }}
+    GOOGLE_CLIENT_SECRET: ${{ inputs.google-client-secret }}
