Fix action name's spelling

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: Intaract with Google Drive
+name: Interact with Google Drive
 description: Upload/Download files to/from Google Drive
 
 branding:
